package ucfassignments;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Christina Persaud
 */

    public class App {
        public static void main(String[] args) {
            System.out.println("Hello World");
            /*
            create to do list
            Initialize new to do list with TodoList function

            call start function
             */
        }
    }
