package ucfassignments;
import java.time.LocalDate;

public class Details extends tdList {

    /**
     * Initialize string variable for title
     * Initialize string variable for description
     * Initialize LocalDate variable for due date
     *
     * Constructor with String, String and date parameters
     * set variables to corresponding variables
     *
     * Create getTitle method
     * return title
     *
     * Create getDescription method
     * return description
     *
     * Create getDate method
     * return due date
     *
     * Create setTitle method with String parameter
     * set title to String parameter
     *
     * Create setDescription method with String parameter
     * set description to String parameter
     *
     * Create setDate method with LocalDate parameter
     * set due date to LocalDate parameter
     */
}
