package ucfassignments;


public class TodoList extends tdList{

    /**
     * Initialize MAX to 100
     * Create an Array List (MAX)
     */

    /**
     * Create a start method
     * While app is running
     * Call display method
     * declare an integer variable
     * Scan user input for int
     * Call ReadNumber method and pass in int
     */

    /**
     * ReadNumber method
     * Scanner for int
     * Call switch and pass in int
     */

    /**
     * Display Method:
     * Print out Options for User:
     * Press 1 to add a new to do list
     * Press 2 to Remove an existing to do list etc.
     * Press 3 to edit the title of a list
     * Press 4 to add to a list
     * Press 5 to remove item from a list
     * Press 6 to edit item on a list
     * Press 7 to mark an item as complete
     * Press 8 to display all items
     * Press 9 to display all incomplete items
     * Press 10 to display complete items
     * Press 11 to print one list
     * Press 12 to save one to do list to a file
     * Press 13 to save all items on all to do lists to a file
     * Press 14 to load a single to do list or all to do lists
     */


    /**
     * switch with scanned number
     * case 1: add a list
     * addList method
     *
     * case 2: remove an existing to do list
     * removeList method
     *
     * case 3: edit the title
     * editTitle method
     *
     * case 4: add to list
     * addToList method
     *
     * case 5: remove item from list
     * removeFromList method
     *
     * case 6: edit item on the list
     * editListItem method
     *
     * case 7: mark an item as complete
     * boolean method
     *
     * case 8: dsiplay all items
     * toString method
     *
     * case 9: display incomplete items
     * displayIncomplete method
     *
     * case 10: display complete items
     * displayComplete method
     *
     * case 11: Print one List
     * printOneList method
     *
     * case 12: items from one to do list to a file
     * saveoneTDList method
     *
     * case 13: items from all to do lists to a file
     * saveallLists method
     *
     * case 14: loading a single to do list
     * loadTDList method
     */
}
