package ucfassignments;

public class tdList {
    /**
     * declare array list <String> </String> with 100 capacity
     *
     * build constructor for Array List: tdList
     * instance initializer for array list
     *
     * addList method
     * print("Type in Name of List when done type stop")
     * for i less than 100
     * create object for new tdList
     * .getTitle method
     * .getDescription method
     * .getDate method
     * if user types in 'stop'
     * break
     * increment count by 1
     * end for
     *
     * removeList method
     * initialize string variable
     * Print ask user which list
     * scan for user input
     * for i less than 100
     * if object at i equals user input
     * for String var in object at i
     * remove var
     * break
     * end for
     * end if
     *
     *
     * editTitle method
     * initialize string variable
     * Print ask user which list
     * scan for user input
     * for i less than 100
     * if obj at i equals user input
     * Print ask user what they want the new title to be
     * new .getTitle function and pass in new title
     * end if
     * end for
     *
     * addToList method
     * Print ask user which list
     * scan for user input
     * for i less than 100
     * if obj at i equals user input
     * Print ask user add item
     * scan for user input
     * Print ask user how many items
     * for i less than user input
     * Print type in item
     * Scanner for item
     * Add item to arrayList
     * end if
     * else
     * print no list of that name exists
     *
     * removeFromList method
     * Print ask user which list
     * scan for user input
     * for i less than 100
     * Print which item on list would you like to remove
     * Scaner for integer
     * use .remove function
     * end if
     *
     * editListItem method
     * for i less than 100
     * Scanner for user input
     * if obj at i equals user input
     * print To edit description press 0, to edit due date press 1
     *      * if 0:
     *      print ask user for new description
     *      Scanner for user input
     *      * call .getDescription function and pass in user input
     *      end if
     *      * if 1:
     *      print ask user for new date
     *      Scanner for user input
     *      * call .getDate function and pass in user input
     *      end if
     *      end if
     *
     * boolean complete method
     * Print ask user which list
     * scan for user input
     * for i less than 100
     * if obj equals user input
     * set that list to true
     * end if
     *
     * toString method
     * Generic method to loop through objects and print out the indexes for each object
     *
     * displayIncomplete method
     * for i less than 100
     * if obj[i] is set to false print
     * end if
     *
     * displayComplete method
     * for i less than 100
     * if obj[i] is set to true print
     * end if
     *
     * printOneList method
     * Print ask user which list
     * scan for user input
     * for i less than 100
     * if obj equals user input
     * Print object
     * end if
     *
     * saveoneTDList method
     * Print ask user which list
     * scan for user input
     * for i less than 100
     * if obj equals user input
     * save to file
     * break;
     * end if
     *
     * saveTDList
     * Print ask user to type enter
     * scan for user input
     * for i less than 100
     * if obj has next
     * save to file
     * end if
     * end for
     *
     * loadTDList method
     * Print ask user how many lists
     * Scanner for int
     * for i less than number user specifies
     * Print ask user which list
     * scan for user input
     * if object at index equals user input
     * load file
     * end if
     *
     */
}
